# flask-opencv-study

./: .gitignore  README.md  docker-compose.yml
src/: Dockerfile  main.py  pyproject.toml  run_prod.sh
src/templates/: index.html
