[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Renan Santana <renan.santana@instruct.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
opencv-python = "^4.8.1.78"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
